Interfacing/.metadata/.plugins/org.eclipse.cdt.ui/Robot.build.log
23:23:02 **** Incremental Build of configuration Debug for project Robot ****
make -j8 all 
arm-none-eabi-g++ "../Core/Src/main.cpp" -mcpu=cortex-m3 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.cpp: In member function 'void ServoMotor::DelayMs(uint32_t)':
../Core/Src/main.cpp:43:9: error: 'ms_delay' was not declared in this scope
   43 |         ms_delay = ms;
      |         ^~~~~~~~
make: *** [Core/Src/subdir.mk:38: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

23:23:02 Build Failed. 2 errors, 0 warnings. (took 874ms)

